# qwertycoin-forkable

./: .clang-format  CHANGELOG.md  CMakeLists.txt  CODING.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  release-candidate.md
.github/workflows/: check.yml  matrix.yml  release.yml
include/: Android.h  CryptoNote.h  CryptoTypes.h  INode.h  IObservable.h  IStreamSerializable.h  ITransfersContainer.h  ITransfersSynchronizer.h  QwertyNote.h  TObservable.h
lib/: CMakeLists.txt
lib/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerData.h  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h  IBlockchainExplorer.h  IBlockchainObserver.h
lib/Breakpad/: Breakpad.cpp  Breakpad.h
lib/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  BlockingQueue.h  ColouredMsg.h  CommandLine.cpp  CommandLine.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  DnsTools.cpp  DnsTools.h  FileMappedVector.h  HardwareInfo.cpp  HardwareInfo.h  IInputStream.h  IOutputStream.h  IntUtil.h  JsonValue.cpp  JsonValue.h  Lazy.h  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  StdOutputStream.h  StreamTools.cpp  StreamTools.h  (+17 more)
lib/Crypto/: Aesb.c  Aesb.h  Blake256.c  Blake256.h  Chacha8.cpp  Chacha8.h  CnSlowHash.cpp  CnSlowHash.h  Crypto.cpp  Crypto.h  CryptoOps.c  CryptoOps.h  CryptoUtil.c  GenericOps.h  Groestl.c  Groestl.h  GroestlTables.h  Hash.c  Hash.h  HashExtra.c  HashOps.h  Jh.c  Jh.h  Keccak.c  Keccak.h  OAesLib.c  OAesLib.h  Random.h  Skein.c  Skein.h  SkeinPort.h  SlowHash.c  SlowHash.cpp  SlowHash.inl  TreeHash.c  chacha8.cpp  chacha8.h  crypto-ops-data.c  crypto-util.c  hash-ops.h  (+4 more)
lib/CryptoNoteCore/: Account.cpp  Account.h  BlockIndex.h  Blockchain.cpp  Blockchain.h  BlockchainIndices.cpp  BlockchainIndices.h  Checkpoints.cpp  Core.cpp  Core.h  CoreConfig.cpp  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  CryptoNoteTools.cpp  Currency.cpp  Currency.h  Difficulty.cpp  Difficulty.h  ICore.h  ITransaction.h  Miner.cpp  Miner.h  MinerConfig.cpp  Transaction.cpp  TransactionExtra.cpp  TransactionExtra.h  TransactionPool.cpp  TransactionPool.h  TransactionPrefixImpl.cpp  TransactionUtils.cpp  UpgradeDetector.h
lib/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h
lib/Global/: Checkpoints.h  Constants.h  CryptoNoteConfig.h  QwertyNoteConfig.h  version.h.in
lib/Http/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
lib/InProcessNode/: InProcessNode.cpp  InProcessNode.h  InProcessNodeErrors.cpp  InProcessNodeErrors.h
lib/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
lib/Logging/: ConsoleLogger.cpp  LoggerManager.cpp  LoggerManager.h
lib/Mnemonics/: electrum-words.cpp  electrum-words.h
lib/NodeRpcProxy/: NodeErrors.cpp  NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
lib/P2p/: ConnectionContext.h  IP2pNodeInternal.h  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  NetNodeCommon.h  NetNodeConfig.cpp  NetNodeConfig.h  P2pConnectionProxy.cpp  P2pConnectionProxy.h  P2pContext.cpp  P2pContext.h  P2pContextOwner.cpp  P2pContextOwner.h  P2pInterfaces.h  P2pNetworks.h  P2pNode.cpp  P2pNode.h  P2pNodeConfig.cpp  P2pNodeConfig.h  P2pProtocolDefinitions.h  P2pProtocolTypes.h  PeerListManager.cpp  PeerListManager.h
lib/PaymentGate/: NodeFactory.cpp  NodeFactory.h  PaymentServiceJsonRpcMessages.cpp  PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  WalletService.cpp  WalletService.h  WalletServiceErrorCategory.cpp  WalletServiceErrorCategory.h
lib/QwertyNoteCore/: Account.cpp  Account.h  BlockIndex.cpp  BlockIndex.h  Blockchain.cpp  Blockchain.h  BlockchainIndices.cpp  BlockchainIndices.h  BlockchainMessages.cpp  BlockchainMessages.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreConfig.cpp  CoreConfig.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  Currency.cpp  (+38 more)
scripts/: prepare_testnet.cmd  prepare_testnet.sh  qwc_testnet.sh  start_testnet.cmd  start_testnet.sh  start_wallets.cmd  start_wallets.sh  wallets_testnet.sh
src/: CMakeLists.txt
src/BinaryInfo/: daemon.rc
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h
src/PaymentGateService/: ConfigurationManager.cpp  ConfigurationManager.h  PaymentGateService.cpp  PaymentGateService.h  PaymentServiceConfiguration.cpp
src/SimpleWallet/: SimpleWallet.cpp  SimpleWallet.h
tests/: CMakeLists.txt
(+189 files in other folders)
